Changed the verbiage from Rails to ActiveRecord.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar">
         <div class="navbar-inner">
             <div class="container">
-                <a href="/" class="brand">ModelProbe</a>
+                <a href="/" class="brand">ModelProbe <small class="by-hopsoft">by Hopsoft &nbsp;&nbsp;</small></a>
 <!--                 <ul class="nav">
                     <li class="active"><a href="#">Home </a></li>
                     <li><a href="#">Tour</a></li>
@@ -42,7 +42,7 @@
 <section class="container">
     <div class="row">
         <header class="highlight span12">
-            <h2>Look inside your <a href="#">Rails</a> models</h2>
+            <h2>Look inside your <a href="http://guides.rubyonrails.org/index.html">ActiveRecord</a> models</h2>
             <p style="margin-top:-15px">...and see the schema that drives them.</p>
             <!-- <img id="feature-screenshot" src="./img/shot.png" alt="screenshot"> -->
             <!-- <p><a href="#" class="big-btn">Fork me on Github</a></p> -->
