--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="./css/bootstrap-responsive.css" type="text/css">
+    <link rel="stylesheet" href="./css/font-awesome.css" type="text/css">
     <link rel="stylesheet" href="./css/strip.css" type="text/css">
     <link rel="stylesheet" href="./css/strip-responsive.css" type="text/css">
    	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600" rel="stylesheet">
@@ -29,12 +30,7 @@
         <div class="navbar-inner">
             <div class="container">
                 <a href="/" class="brand">ModelProbe <small class="by-hopsoft">by Hopsoft &nbsp;&nbsp;</small></a>
-<!--                 <ul class="nav">
-                    <li class="active"><a href="#">Home </a></li>
-                    <li><a href="#">Tour</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
- -->            </div>
+            </div>
         </div>
     </nav>
 </section>
@@ -44,17 +40,9 @@
         <header class="highlight span12">
             <h2>Look inside your <a href="http://guides.rubyonrails.org/index.html">ActiveRecord</a> models</h2>
             <p style="margin-top:-15px">...and see the schema that drives them.</p>
-            <!-- <img id="feature-screenshot" src="./img/shot.png" alt="screenshot"> -->
-            <!-- <p><a href="#" class="big-btn">Fork me on Github</a></p> -->
-            <!-- <p>Tell them how amazing your <strong>App</strong> is. <a href="#">Log in</a> for existing users.</p> -->
         </header>
     </div>
-<!--     <div class="row">
-   		<div class="offset3 span6">
-        	<hr class="shadow-line"/>
-        </div>
-    </div>
- --></section>
+</section>
 
 <section class="container">
 	<div class="highlight row">
@@ -78,16 +66,6 @@
                         <p class="center-align">Easily create test fixtures based on the current schema.</p>
                     </article>
                 </div>
-<!--                 <div class="item">
-                    <p>
-                        <img src="./img/folders.png" alt="folders" />
-                    </p>
-                    <article class="carousel-caption">
-                        <h3 class="quotes">"I designed LandingStrip to be easily editable for everyone."</h3>
-                        <p class="center-align">- Ace Subido.</p>
-                    </article>
-                </div>
- -->
             </div>
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
             <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
@@ -108,74 +86,78 @@ MyModel.probe</code></pre>
             </article>
             <header class="highlight span12">
                 <br /><br />
-                <a href="https://github.com/hopsoft/model_probe" class="big-btn">Fork me on Github</a>
+                <a href="https://github.com/hopsoft/model_probe" class="big-btn">
+                    <i class="icon-git-fork" style="opacity:0.5;padding-top:6px;">&nbsp;</i>&nbsp;&nbsp;
+                    Fork me on Github
+                </a>
             </header>
-<!--             <article class="span4 center-align">
-
-            	<img src="./img/heartwork.png" alt="heartwork" />
-                <h3>Crafted with love.</h3>
-                <p>
-					<i>"Absolutely enjoyed the process of crafting a sharp and consistent tone for LandingStrip.
-                    Tried to mold a template where people can clearly get their intent across with a single-page using a story-like flow."</i>
-                </p>
-                <p>
-                	<strong>- Ace Subido</strong>
-               	</p>
-                <p>
-                    <a href="#">Find out who we are</a>
-                </p>
-            </article>
- -->   		</div>
+  		</div>
     </div>
 </section>
 
-<!-- <section class="container mobile-button">
-	<p>
-    	<a href="#"><img src="./img/appstore.png" alt="appstore" /></a>
-		<a href="#"><img src="./img/googleplay.png" alt="googleplay"/></a>
-    </p>
-</section>
- -->
-<!-- <section class="container">
-	<div class="row">
-        <div class="offset3 span6">
-            <hr class="shadow-line"/>
-        </div>
-    </div>
-	<div class="row">
-    	<div class="highlight span12">
-            <h3>With <strong>LandingStrip</strong>, you can tell visitors who your customers are.</h3>
-            <h3 class="subhead">Your <strong>App</strong> is used by people all over the world.</h3>
-            <div class="logo-list">
-            	<img src="./img/logoplaceholder.png" alt="companyA"/>
-                <img src="./img/logoplaceholder.png" alt="companyA"/>
-                <img src="./img/logoplaceholder.png" alt="companyA"/>
-                <img src="./img/logoplaceholder.png" alt="companyA"/>
-                <img src="./img/logoplaceholder.png" alt="companyA"/>
-                <img src="./img/logoplaceholder.png" alt="companyA"/>
+<section class="footer-section">
+    <div class="container">
+        <footer class="footer-box">
+            <div class="row">
+                <h3 class="span12">
+                    <i class="icon-trophy" style="margin:12px 10px 0 0"></i>
+                    More Award Winning Ruby Gems
+                </h3>
+
+                <div class="offset4 span2">
+                    <ul class="unstyled">
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/hero/">Hero</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/coast/">Coast</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/goldmine/">Goldmine</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/micro_test">MicroTest</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/micro_mock">MicroMock</a>
+                      </li>
+                    </ul>
+                </div>
+
+                <div class="span2">
+                    <ul class="unstyled">
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/grumpy_old_man">Grumpy Old Man</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/model_probe/">ModelProbe</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="http://hopsoft.github.com/footing/">Footing</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="https://github.com/hopsoft/grand">Grand</a>
+                      </li>
+                    </ul>
+                </div>
+
+                <p class="span12">
+                    <br /><br />
+                    &copy; 2012 <strong>Hopsoft</strong> All rights reserved
+                </p>
             </div>
-        	<p><a href="#" class="big-btn">Sign Up</a></p>
-            <p>Last chance to invite your visitors to your <strong>App</strong>. Try it out, it's free.</p>
-	    </div>
+        </footer>
     </div>
 </section>
- -->
-<footer class="container footer-box">
-<!--     <hr class="shadow-line" />
-    <nav class="links">
-        <a href="#">About</a>
-        <a href="#">Tour</a>
-        <a href="#">Blog</a>
-        <a href="#">Terms of Use</a>
-        <a href="#">Support</a>
-    </nav>
-    <nav class="links">
-        <a href="#"><img src="img/twitter-icon.png" alt="twitter"></a>
-        <a href="#"><img src="img/facebook-icon.png" alt="fb"></a>
-        <a href="#"><img src="img/googleplus-icon.png" alt="gplus"></a>
-    </nav>
- -->    <p>&copy; 2012 <strong>Hopsoft</strong> All rights reserved</p>
-</footer>
 <script src="./js/jquery-1.8.0.min.js"></script>
 <script src="./js/bootstrap.js"></script>
 
