Added a link to annotate models.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </p>
                     <article class="carousel-caption">
                         <h3>Introspect your models at runtime.</h3>
-                        <p class="center-align">Inspired by annotate_models but doesn't modify anything... and its always accurate.</p>
+                        <p class="center-align">Inspired by <a href="https://github.com/ctran/annotate_models">annotate_models</a> but doesn't modify anything... and its always accurate.</p>
                     </article>
                 </div>
                 <div class="item">
