Added coin links.

--- a/index.html
+++ b/index.html
@@ -146,6 +146,19 @@ MyModel.probe</code></pre>
                     </ul>
                 </div>
 
+                <div class="span2">
+                    <ul class="unstyled">
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="https://github.com/hopsoft/coin">Coin</a>
+                      </li>
+                      <li>
+                        <i class="icon-ok"></i>
+                        <a href="https://github.com/hopsoft/coin_rack">CoinRack</a>
+                      </li>
+                    </ul>
+                </div>
+
                 <p class="span12">
                     <br /><br />
                     &copy; 2012 <strong>Hopsoft</strong> All rights reserved
